# aspire-ai

./: .gitignore  ASPIRE-SPEC.md  CONTRIBUTING.md  LICENSE  README.md  TESTS-TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aspire/: __init__.py  cli.py  config.py  trainer.py
aspire/critic/: __init__.py  base.py  head.py  separate.py  shared.py
aspire/dialogue/: __init__.py  formatter.py  generator.py  manager.py
aspire/losses/: __init__.py  combined.py  critic.py  student.py
aspire/teachers/: __init__.py  base.py  claude.py  composite.py  local.py  openai.py  personas.py  registry.py
examples/: basic_dialogue.py  composite_teacher.py  custom_teacher.py
integrations/forge/: README.md  __init__.py  image_critic.py  metadata.ini  preload.py  vision_teacher.py
integrations/forge/scripts/: aspire_generate.py  aspire_train.py
integrations/isaac/: README.md  __init__.py  config.py  isaac_wrapper.py  motion_teacher.py  trainer.py  trajectory_critic.py
integrations/isaac/examples/: basic_training.py  custom_teacher.py  locomotion.py
tests/: conftest.py  test_cli.py  test_critic_edge_cases.py  test_dialogue_edge_cases.py  test_losses_edge_cases.py  test_teachers_claude.py  test_teachers_local.py  test_teachers_openai.py  test_trainer_edge_cases.py  test_trainer_unit.py  test_windows_compatibility.py
tests/integrations/code/: test_code_data.py
